Enhance CodeBlock with Prism line numbers and highlights
Added PrismJS line-numbers and line-highlight plugins to improve code block display. Updated CSS imports and refactored CodeBlock component to use Prism's built-in line numbering and highlighting, simplifying the rendering logic. Also changed the default language for install command to 'bash' in the getting started page.

--- a/.pages/app/globals.css
+++ b/.pages/app/globals.css
@@ -1,5 +1,7 @@
 @import "tailwindcss";
 @import "prismjs/themes/prism-twilight.css";
+@import "prismjs/plugins/line-numbers/prism-line-numbers.css";
+@import "prismjs/plugins/line-highlight/prism-line-highlight.css";
 
 @custom-variant dark (&:where(.dark, .dark *));
 
